# handlers/prepare_video.py
@@ -56,6 +56,9 @@ def prepare_video(data):
         subtitles_bg_color_g = data.get('subtitles_bg_color_g')
         subtitles_bg_color_b = data.get('subtitles_bg_color_b')
 
+        headline = data.get('headline')
+        headline_color = data.get('headline_color')
+
         short_timestamp = (short_timestamp_start, short_timestamp_end)
 
         prepare = PrepareVideo(video, short_timestamps=short_timestamp, primary_video_path=primary_video_path, format_type=format_type, original_id=original_id)
@@ -70,6 +73,12 @@ def prepare_video(data):
             subtitles_primary_color = (subtitles_bg_color_r, subtitles_bg_color_g, subtitles_bg_color_b)
 
             prepare.set_subtitles(subtitles_json, short_timestamp_start, subtitles_position, subtitles_font, subtitles_color, subtitles_primary_color, subtitles)
+
+        if headline and subtitles_position != 0:
+            if not headline_color:
+                raise Exception(f"Headline color is required")
+
+            prepare.set_headline(headline, headline_color)
 
         # Проверка наложения фоновой музыки
         if music_file_type != -1:
